# mochii

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GenerateProject.bat  LICENSE.txt  Mochii.sln  README.md  mochii.slnx  premake5.lua
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue--bug-report.md  issue--feature-request.md  other-issues--blank-template.md
.github/workflows/: build.yml  cmake-multi-platform.yml  codeql.yml  daily-release.yml  security.yml
GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
Mochii/: CMakeLists.txt  Mochii.vcxproj  Mochii.vcxproj.filters
Mochii/src/: Mochii.h  mzpch.h
Mochii/src/Mochii/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Mochii/src/Mochii/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Window.cpp  Window.h
Mochii/src/Mochii/Debug/: Instrumentor.h
Mochii/src/Mochii/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Mochii/src/Mochii/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Mochii/src/Mochii/Math/: Math.cpp  Math.h
Mochii/src/Mochii/Platform/: WindowsWindow.cpp  WindowsWindow.h
Mochii/src/Mochii/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Mochii/src/Mochii/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Mochii/src/Mochii/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Mochii/src/Mochii/Scene/: Components.h  Scene.cpp  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  entity.cpp  entity.h  scene.h
MochiiEditor/: CMakeLists.txt
MochiiEditor/assets/scenes/: Example.mochii
MochiiEditor/assets/shaders/: Texture.glsl
MochiiEditor/src/: BadApplePlayer.cpp  BadApplePlayer.h  EditorLayer.cpp  EditorLayer.h  MochiiEditorApp.cpp
MochiiEditor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
cmake/: Clang.cmake  GNU.cmake
imgui/: ImGui.vcxproj  ImGui.vcxproj.filters
mochii/: mochii.vcxproj
premake/: fetch.lua
scripts/: Win-GenProjects.bat  build-debug.bat  build-release.bat
src/: CMakeLists.txt
src/Mochii/: CMakeLists.txt
src/Mochii/src/: mzpch.h
src/Mochii/src/Mochii/Core/: Application.cpp  Assert.h  Base.h  EntryPoint.h  KeyCodes.h  Layer.cpp  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Window.h
src/Mochii/src/Mochii/Debug/: Instrumentor.h
src/Mochii/src/Mochii/Math/: Math.h
src/Mochii/src/Mochii/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Mochii/src/Mochii/Platform/Windows/: WindowsWindow.h
src/Mochii/src/Mochii/Renderer/: Buffer.cpp  Buffer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h
src/Mochii/src/Mochii/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneSerializer.cpp  ScriptableEntity.h
src/Mochii/src/Mochii/Utils/: PlatformUtils.h
src/MochiiEditor/: CMakeLists.txt
src/MochiiEditor/assets/shaders/: Texture.glsl
src/MochiiEditor/src/: EditorLayer.cpp  EditorLayer.h
src/MochiiEditor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Sandbox/assets/shaders/: Texture.glsl
src/Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h
